home leadership images alignment fix

--- a/assets-src/sass/components/_comp-profile.scss
+++ b/assets-src/sass/components/_comp-profile.scss
@@ -199,8 +199,12 @@
 	}
 	&:first-of-type{
 		// margin-top: 2rem;
-
 	}
+
+	body.ios & {
+		margin-top: $gut;
+	}
+
 	@include break-point(tablet) {
 		&:not(:first-of-type) {
 			margin-top: 0;
@@ -213,11 +217,15 @@
         &:nth-child(n+3) {
             margin-top: $gut;
         }
-	}
 
-	@include break-point(laptop) {
-		&:first-of-type{
-			margin-top: unset;
+		body.ios & {			
+			&:nth-child(2n+3) {
+				margin-left: $gut;
+			}
+
+			&:nth-of-type(n+3) {
+				// margin-top: 0;
+			}
 		}
 	}
 
@@ -225,9 +233,13 @@
 	@include break-point(laptop) {
 		align-self: auto;
 
+		&:first-of-type{
+			margin-top: unset;
+		}
+
 		&:nth-child(2n+3) {
             margin-left: $gut;
-      }
+      	}
 
         &:nth-of-type(n+3) {
 			margin-top: 0;
